--- a/TODO.txt
+++ b/TODO.txt
@@ -15,3 +15,23 @@
 * Joystick DPad inputs
 
 
+* Need to stream logs over ethernet to offboard processor
+
+* InputManager and OutputManager
+	- Add contains() method to check to see if the given input/output exists in the manager
+	- Change getInput/getOutput to throw NoSuchElementException if it does not exist
+	- Will need to change the lists to maps to make this efficient
+	- getInput()/getOutput() currently inefficient - use flag to indicate it is found and break early, or convert to Map from List
+
+* AbstractInput.removeListener()
+	- Add check for null parameter
+	- Update remove unit test to test for null parameter
+
+* Check the failing tests for any that need code checked and updated to meet the test
+
+* AnalogInput
+	- Add a configurable tolerance value
+	- Input will only classify as changed if the value exceeds this tolerance either side of its current value
+	- this can help smooth noisy inputs, especially with high precision values
+	-- of course the tolerance could be set to 0 if needed
+
